修改开发模块

--- a/项目需求模块.md
+++ b/项目需求模块.md
@@ -1,110 +1,173 @@
 lazy-ctrl 功能模块规划文档
 
-## 1. 控制器 Agent（Go 实现）
-位置：本地电脑，负责执行脚本和提供通信接口。
+## 系统架构概述
+
+lazy-ctrl 采用分层架构设计，支持三种使用模式：
+1. **本地模式**：手机/PC → HTTP → 本地Controller → 执行命令
+2. **云端模式**：手机/PC → HTTP → 云端Gateway → gRPC → 本地Controller → 执行命令  
+3. **第三方云模式**：第三方云 → MQTT → 本地Controller → 执行命令
+
+## 1. 控制器 Agent（Go 实现）- 核心执行引擎
+位置：本地电脑，负责执行脚本和提供多协议通信接口。
+
+### - 多协议服务支持：HTTP/gRPC/MQTT 三协议并存
+  - 功能目标：
+    - **HTTP Server**：供本地直连使用（内网场景）
+    - **gRPC Server**：供云端Gateway调用（云端场景）
+    - **MQTT Client**：对接第三方IoT平台（如阿里云IoT、腾讯云IoT）
+    - 三协议共享同一套命令执行核心
+
+  - 技术实现：
+    - 启动时同时开启三种协议服务
+    - 统一的命令路由和执行引擎
+    - 协议间状态同步机制
 
 ### - 命令注册/管理：支持注册常用命令或脚本（如 mute、shutdown）
   - 功能目标：
-    - 支持用户将常用系统脚本（如 mute、shutdown）注册为命令 ID；
-    - 提供统一调用接口（本地 CLI / 远程调用均可使用）；
-    - 后期支持 Web 页面管理这些命令。
+    - 支持用户将常用系统脚本（如 mute、shutdown）注册为命令 ID
+    - 支持平台特定命令配置（Windows/macOS/Linux）
+    - 提供统一调用接口，所有协议均可使用
+    - 支持动态配置热重载
 
   - 技术实现：
-    - 使用本地 JSON 配置文件（如 `commands.json`）注册命令 ID → 脚本路径；
-    - Go 启动时读取并缓存配置；
-    - 后期支持由本地配置服务动态热更新。
+    - 使用本地 JSON 配置文件（`config/commands.json`）
+    - 支持嵌套配置结构，按平台区分命令
+    - Go 启动时读取并缓存配置
+    - 提供配置重载 API
 
-### - 命令执行器：执行本地脚本或系统指令，支持参数传递
+### - 命令执行器：执行本地脚本或系统指令
   - 功能目标：
-    - 统一封装系统调用执行入口；
-    - 支持命令行参数传入，适配多样化场景；
-    - 输出标准输出/错误并返回执行状态。
+    - 统一封装系统调用执行入口
+    - 支持超时控制和上下文取消
+    - 跨平台命令适配（Windows cmd/PowerShell，Unix shell）
+    - 输出标准输出/错误并返回执行状态
 
 ### - 状态反馈：返回脚本执行结果、输出、是否成功等
   - 功能目标：
-    - 所有执行请求返回标准化响应结构：是否成功 + 输出文本；
-    - 支持本地 CLI 打印、远程调用回传结构体；
-    - 后期可扩展日志记录机制。
+    - 标准化响应结构：成功状态 + 输出 + 错误信息 + 执行时间
+    - 支持流式输出（长时间运行的命令）
+    - 执行日志记录机制
 
-### - 本地通信接口：提供 gRPC 或 HTTP 接口供 Node 层或远程调用
+### - 安全限制：多层安全防护机制
   - 功能目标：
-    - 提供统一的 `ExecuteCommand` 接口服务；
-    - gRPC 为默认实现，未来可扩展 HTTP 接口兼容更多场景；
-    - 本地通信推荐采用 Unix socket，跨平台时可自动 fallback 为 TCP。
-
-### - 安全限制（可选）：限制可执行脚本、路径隔离、执行白名单等
-  - 功能目标：
-    - 限定允许执行的脚本路径；
-    - 可配置命令白名单；
-    - 后期可集成用户权限、PIN 校验机制等。
+    - 命令白名单机制，只允许执行预注册命令
+    - 路径隔离，限制脚本执行范围
+    - 可选PIN校验，防止未授权访问
+    - 执行频率限制，防止恶意调用
 
 ---
 
-## 2. 本地配置服务（Node.js + Midway 实现）
-位置：用于管理本地脚本配置，提供 REST API 给前端控制端调用。
-
-### - 脚本管理 API：添加、修改、删除本地控制脚本
-  - 提供标准 RESTful 接口；
-  - 修改本地 `commands.json` 配置文件并热更新。
-
-### - 配置持久化：将配置写入 JSON、数据库或本地文件
-  - 默认写入本地 JSON 文件，后期可扩展 SQLite / 文件系统存储；
-  - 自动同步修改到 Go 控制器。
-
-### - 控制中转接口：接收来自前端的控制请求并调用 Go 控制器
-  - 作为 Web 前端和控制器的桥梁；
-  - 调用本地 gRPC 接口转发命令请求。
-
-### - 用户界面支持：给前端提供接口获取脚本列表、执行状态等
-  - 提供 GET 接口查询命令元数据、执行日志等；
-  - 接口结构标准化，方便前端对接。
-
-### - 本地认证（可选）：支持 PIN 或本地密码校验
-  - 启用后需要验证 PIN 才能控制电脑；
-  - 提升安全性，避免误操作。
-
----
-
-## 3. 控制前端（Taro + 微信小程序/H5 实现）
+## 2. 控制前端（Taro + 微信小程序/H5 实现）
 位置：终端控制界面，用户通过手机操作本地电脑
 
+### - 连接模式管理：支持多种连接方式
+  - 功能目标：
+    - **本地直连模式**：扫码或输入IP直接连接本地Agent
+    - **云端模式**：通过云端Gateway连接本地Agent
+    - **第三方云模式**：显示MQTT连接状态
+    - 连接状态实时显示和自动重连
+
 ### - 脚本控制页面：展示当前可用脚本，点击执行
-  - UI 列表展示所有已注册脚本；
-  - 点击发送控制请求到本地服务。
+  - 功能目标：
+    - 动态获取和展示所有已注册脚本
+    - 支持分类展示（系统控制、应用启动、自定义脚本等）
+    - 一键执行，支持确认对话框防误操作
+    - 支持批量操作和快捷操作
 
 ### - 状态反馈：展示执行结果、是否成功、输出日志等
-  - 实时展示脚本执行状态与输出反馈；
-  - 支持错误提示与重试机制。
+  - 功能目标：
+    - 实时展示脚本执行状态与输出反馈
+    - 支持长时间任务的进度显示
+    - 错误提示与重试机制
+    - 执行历史记录查看
 
-### - 控制模式切换：本地控制 / 云端远程控制切换入口
-  - 显示连接状态；
-  - 提供连接本地与云端设备的入口与切换。
-
-### - 配置界面（可选）：允许用户修改脚本别名、图标等元数据
-  - 编辑脚本名、图标、快捷入口；
-  - 调用本地配置服务完成更新。
+### - 配置界面：设备管理和脚本配置
+  - 功能目标：
+    - 设备连接配置（IP、端口、认证信息）
+    - 脚本别名、图标、分组管理
+    - 安全设置（PIN码、指纹验证等）
+    - 连接偏好设置
 
 ---
 
-## 4. 云端中转服务（可选，Node.js 实现）
-位置：用户在公网控制本地设备时用作账号验证、消息转发。
+## 3. 云端Gateway服务（Node.js + Midway 实现）
+位置：云端中转服务，提供设备管理和gRPC转发功能
 
-### - 用户认证：支持微信登录、设备绑定、多人共享
-  - 实现 OAuth 登录；
-  - 支持绑定设备到用户账号。
+### - 用户认证与设备管理
+  - 功能目标：
+    - 支持多种登录方式（微信、手机号、邮箱等）
+    - 设备注册与绑定机制
+    - 多人共享设备权限管理
+    - 设备分组和标签管理
 
-### - 设备注册：本地控制器 Agent 可注册设备 ID 并与用户关联
-  - 支持设备名称、描述、状态等字段；
-  - 可通过扫码等方式完成绑定。
+  - 技术实现：
+    - JWT Token认证机制
+    - 设备UUID生成和管理
+    - Redis缓存设备在线状态
+    - 权限控制中间件
 
-### - 控制转发：将前端命令转发至对应 Agent
-  - 云端存储设备在线状态 / 通道；
-  - 实现按用户 ID → 设备 ID → 通道消息转发。
+### - gRPC客户端：与本地Agent通信
+  - 功能目标：
+    - 作为gRPC客户端调用本地Agent服务
+    - 支持连接池和负载均衡
+    - 自动重连和故障转移
+    - 请求响应日志记录
 
-### - 状态上报中转：Agent 执行结果由云端转发回前端
-  - 云端负责回传执行响应；
-  - 前端统一接收状态。
+  - 技术实现：
+    - gRPC连接管理器
+    - 心跳检测机制
+    - 超时和重试策略
+    - 流式调用支持
 
-### - 实时连接支持：通过 WebSocket 或 gRPC streaming 长连接通信
-  - 云端与 Agent 建立长连接；
-  - 支持消息推送、命令推送、断线重连等机制。
+### - REST API服务：供前端调用
+  - 功能目标：
+    - 提供标准RESTful接口
+    - 设备控制命令转发
+    - 设备状态查询
+    - 执行历史记录管理
+
+### - 实时通信：WebSocket推送
+  - 功能目标：
+    - 命令执行状态实时推送
+    - 设备在线状态变化通知
+    - 多端同步显示
+    - 断线重连机制
+
+---
+
+## 4. 第三方云平台集成（MQTT支持）
+位置：支持对接主流IoT云平台
+
+### - MQTT客户端集成
+  - 功能目标：
+    - 支持阿里云IoT、腾讯云IoT、AWS IoT等主流平台
+    - 标准MQTT 3.1.1/5.0协议支持
+    - 自动重连和消息持久化
+    - 主题订阅和发布管理
+
+### - 消息格式标准化
+  - 功能目标：
+    - 定义统一的命令消息格式
+    - 支持JSON和二进制消息
+    - 消息加密和签名验证
+    - 错误处理和状态反馈
+
+---
+
+## 5. 部署和开发模式
+
+### - 开发模式
+  - 本地开发：Go Agent + 前端同时运行
+  - 调试支持：详细日志和错误信息
+  - 热重载：配置文件变更自动生效
+
+### - 生产部署
+  - **极简部署**：单个Go二进制文件，下载即用
+  - **完整部署**：Go Agent + 云端Gateway + 前端
+  - **混合部署**：本地Agent + 云端Gateway，前端可选
+
+### - 跨平台支持
+  - Windows/macOS/Linux一键编译
+  - ARM架构支持（树莓派、NAS等）
+  - Docker容器化部署
+  - 自动更新机制
